--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,9 +6,15 @@ img.frame {
   outline: 1px solid #ffffff;
   outline-offset: calc(-1*var(--s));
   background: conic-gradient(from 90deg at 1px 1px,#00000000 25%,#ffffff 0);
-  
+
 }
 
+img.framed {
+  border: solid #ffffff;
+  border-style: #ffffff;
+  border-width: 5px;
+
+}
 
 body {
 
